--- a/README
+++ b/README
@@ -1,3 +1,19 @@
 
-# Example of encrypting and decrypting in one go
-cat /etc/passwd | ./backupcrypt -f ~/.backup_key | ./backupcrypt -d
+SETUP
+
+You need to create a "key-file". This is a simple textfile with your
+encryption password/passphrase on the first line of the file (and the file
+must contain nothing else).
+
+Example:
+
+echo "S00perS3cr3tP@zzw0rt" > ~/.backupcrypt.key
+
+
+USAGE EXAMPLES
+
+# Example of encrypting and decrypting in one go (just a simple test to see
+# that everything works) 
+cat /etc/passwd | ./backupcrypt -f ~/.backupcrypt.key | ./backupcrypt -d
+
+
